Added different workding to index page and reorganized under more subheads.

--- a/index.html
+++ b/index.html
@@ -99,10 +99,19 @@
 					What We Do
 				</h2>
 				<h3>
-					Provide Superior Quality Dental Health Care  
+					Provide Superior Quality Dental Health Care 
 				</h3>
                 <p>
-					At Super Smiles Dental, we believe that maintaining good oral health with a beautiful smile is essential to maintaining a healthy  and successful life.  Our <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> is committed to making your visit the most informed, comfortable and personable experience possible. <a href="about.html" alt="Meet Dr. Miller: Click to read Dr. Miller's bio." title="Meet Dr. Miller: Click to read Dr. Miller's bio.">Dr. Miller</a> will instantly make you feel at ease with a gentle and expert approach to providing the quality care you deserve.  Dr. Miller ensures you are well informed through the course of your dental treatment discussing all challenges, their remedies, and the next steps most appropriate for your specific personal needs.  
+					Maintaining good oral health with a beautiful smile is essential to maintaining a healthy  and successful life.  Your oral health is important as it directly impacts your overall health, self image and perceptions of you by others; thereby, affecting your emotional health and your personal and professional standing.   The Super Smiles Dental <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> are committed to improving your oral health to improve your life.  
+                 </p>
+                 <h2>
+                    What Will You Experience
+                 </h2>
+                 <h3>
+                    Premium Level of Service
+                 </h3>
+                 <p>
+                    Lead by <a href="about.html" alt="Meet Dr. Miller: Click to read Dr. Miller's bio." title="Meet Dr. Miller: Click to read Dr. Miller's bio.">Dr. Miller</a>, the Super Smiles Dental professionals will make your visit the most informed, comfortable and personable experience possible. Dr. Miller will instantly make you feel at ease with a gentle and expert approach to providing the quality care you deserve.  Dr. Miller ensures you are well informed through the course of your dental treatment discussing all challenges, their remedies, and the next steps most appropriate for your specific personal needs.                    
 				</p>
 				<p>
 					Using extensive medical expertise and experience in conjunction with the latest array of dental technologies and information systems, Dr. Miller will craft <a href="services.html" alt="Services: Click for detailed information about our dental services." title="Services: Click for detailed information about our dental services.">comprehensive dental care options</a> that restore and improve your oral health, brighten your smile and fit within your financial goals. 
