--- a/patient-resources.html
+++ b/patient-resources.html
@@ -101,7 +101,8 @@
 				<p>We appreciate your assistance in providing us with the following information on the day of your appointment:</p>
                 <ul>
                 	<li>Xrays (if applicable)</li>
-                    <li>A list of your current medical prescriptions. Please inform our office if you have any
+                    <li>A list of your current medical prescriptions. <br/>
+                        Please inform our office if you have any
                          medical conditions that may be of concern prior to dental treatment (i.e. high blood pressure, previous heart surgery, allergies to medicine, etc.)</li>
 					<li>Your dental insurance information</li>
                 </ul>
