--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					Provide Superior Quality Dental Health Care 
 				</h3>
                 <p>
-					Maintaining good oral health with a beautiful smile is essential to maintaining a healthy  and successful life.  Your oral health is important as it directly impacts your overall health, self image and perceptions of you by others; thereby, affecting your emotional health and your personal and professional standing.   The Super Smiles Dental <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> are committed to improving your oral health to improve your life.  
+					Maintaining good oral health with a beautiful smile is essential to maintaining a healthy  and successful life.  Your oral health is important as it directly impacts your overall health, appearance, and self esteem; thereby, affecting your emotional health and your personal and professional standing.   The Super Smiles Dental <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> are committed to improving your oral health to improve your life.  
                  </p>
                  <h2>
                     What Will You Experience
