Added gentle and friendly.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     What Will You Experience
                  </h2>
                  <h3>
-                    Premium Level of Service
+                    Gentle, Friendly, Premium Level of Service
                  </h3>
                  <p>
                     Led by <a href="about.html" alt="Meet Dr. Miller: Click to read Dr. Miller's bio." title="Meet Dr. Miller: Click to read Dr. Miller's bio.">Dr. Miller</a>, the Super Smiles Dental professionals will make your visit the most informed, comfortable and personable experience possible. Dr. Miller will instantly make you feel at ease with a gentle and expert approach to providing the quality care you deserve.  Dr. Miller ensures you are well informed through the course of your dental treatment discussing all challenges, their remedies, and the next steps most appropriate for your specific personal needs.                    
