--- a/patient-resources.html
+++ b/patient-resources.html
@@ -103,7 +103,7 @@
                 	<li>Xrays (if applicable)</li>
                     <li>A list of your current medical prescriptions. <br/>
                         Please inform our office if you have any
-                         medical conditions that may be of concern prior to dental treatment (i.e. high blood pressure, previous heart surgery, allergies to medicine, etc.)</li>
+                         medical conditions that may be of concern prior to dental treatment (e.g. high blood pressure, previous heart surgery, allergies to medicine, etc.)</li>
 					<li>Your dental insurance information</li>
                 </ul>
                 
