Fixed a little wording.

--- a/patient-resources.html
+++ b/patient-resources.html
@@ -109,7 +109,7 @@
                 
 				<h2>Treatment</h2>
                 <p>
-                    After your initial visit, you will schedule an appointment on another day for any procedure you may need according to your treatment plan. Occasionally, treatment can be done on the same day as the initial visit if there is enough time allowed.
+                    After your initial visit, you will schedule an appointment on another day for any procedure you may need according to your treatment plan. Occasionally, treatment can be done on the same day as the initial visit if there is enough time available.
                 </p>
                 <h2>Emergency/Problem Focused Visit</h2>
                 <p>
