--- a/patient-resources.html
+++ b/patient-resources.html
@@ -115,6 +115,7 @@
                 <p>
                     Should you experience pain or have an emergency situation, we will make every effort to see you that day. Dr. Miller may prescribe one or two xrays of the area in question to help with the diagnosis. If time allows, Dr. Miller may provide treatment immediately to either provide an immediate remedy or mitigate your symptoms until your follow-up appointment when more time is available to provide a comprehensive solution.
                 </p>
+                <h2>Financial Considerations</h2>
                 <p>
                     If you do not have dental insurance or if your dental insurance plan does not cover any part of your dental treatment, we can help you identify the financing options available to you, and discuss which may be most appropriate for your particular needs.
                 </p>
