Updated phone number and email address so that calling them and emailing is possible through click or touch.

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
 					Contact Us 
 				</h2>
 				<h3>
-					781.272.1288
+					<a href="tel:7812721288">781.272.1288</a>
 					<br/>
-					appointments@supersmilesburlington.com
+					<a href="mailto:appointments@supersmilesburlington.com" alt="For general inquiries, email us at appointments@supersmilesburlington.com" title="For general inquiries, email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>
 				</h3>
 				<p>To experience the superior quality of Super Smiles Dental, make your appointment today and call us at:   <a href="tel:7812721288">781.272.1288</a></p>
                 <p>We look forward to hearing from you.</p>
