Updated with team holiday notice.

--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
     <div id="content-area">
         <div id="main-content">
             <article>
-            	 <!--
-	                <h2>Closed for Winter Storm</h2>
+            	 
+	                <h2>Closed Friday for Team Holiday</h2>
 	                <p>
-	                    Super Smiles Dental of Burlington is closed today Monday February 9th due to snow.
-	                    <mark>We are accepting appointment requests by phone and email</mark>, and will return 
-	                        your calls and emails in a timely manner.  Thank you for your patience as we enjoy this
-	                        spectacle of mother nature.... yet again.
+	                    Super Smiles Dental of Burlington is closed Friday March 20th for a team holiday.
+	                    We are accepting appointments by telephone and email during this time and will respond
+	                    as promptly as possible.  Thank you for visiting Super Smiles Dental.  We look
+	                    forward to seeing you next week.
                     </p>
-                -->
+                
                 <h1>
 					Welcome to Super Smiles Dental
 				</h1>
