Changed state-of-the-art to modern.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					Your Community Dental Health Center
 				</h3>
                 <p>
-					Super Smiles Dental of Burlington is a state-of-the-art Dental Health Care Center serving Arlington, Burlington, Lexington, Woburn and surrounding areas.  
+					Super Smiles Dental of Burlington is a modern Dental Health Care Center serving Arlington, Burlington, Lexington, Woburn and surrounding areas.  
 				</p>
 				<p>
 					Our mission is to provide high quality affordable dental health care to all members of our community.  Seniors, young adults, and children; all are welcome at Super Smiles Dental.  
