Updated insurance list with links.

--- a/patient-resources.html
+++ b/patient-resources.html
@@ -73,21 +73,61 @@
                     We work with all dental insurances and have in-network relationships with major insurances including:
                 </p> 
 						<ul>
-							<li>Aetna</li>
-							<li>Altus</li>
-							<li>Blue Cross Blue Shield</li>
-							<li>Cigna</li>
-							<li>Delta Dental</li>
-							<li>DentaQuest</li>
-							<li>Guardian</li>
 							<li>
-								<a href="http://masshealth-dental.net" alt="Link to MassHealth" title="Link to MassHealth">
+								<a href="http://www.aetnadental.com" alt="Link to Aetna Dental" title="Link to Aetna Dental">
+									Aetna
+								</a>
+							</li>
+							<li>
+								<a href="http://www.altusdental.com" alt="Link to Altus Dental" title="Link to Altus Dental">
+									Altus
+								</a>
+							</li>
+							<li>
+								<a href="http://www.bcbs.com" alt="Link to Blue Cross Blue Shield dental insurance" title="Link to Blue Cross Blue Shield dental insurance">
+									Blue Cross Blue Shield
+								</a>
+							</li>
+							<li>
+								<a href="http://www.cigna.com" alt="Link to Cigna dental insurance" title="Link to Cigna dental insurance">
+									Cigna
+								</a>
+							</li>
+							<li>
+								<a href="http://www.deltadental.com" alt="Link to Delta Dental dental insurance" title="Link to Delta Dental dental insurance">
+									Delta Dental
+								</a>
+							</li>
+							<li>
+								<a href="http://www.dentaquest.com" alt="Link to DentaQuest dental insurance" title="Link to DentaQuest dental insurance">
+									DentaQuest
+								</a>
+							</li>
+							<li>
+								<a href="http://www.guardiananytime.com" alt="Link to Guardian dental insurance" title="Link to Guardian dental insurance">
+									Guardian
+								</a>
+							</li>
+							<li>
+								<a href="http://masshealth-dental.net" alt="Link to MassHealth dental insurance" title="Link to MassHealth dental insurance">
 									MassHealth
 								</a>
 							</li>
-							<li>Medicaid</li>
-							<li>MetLife</li>
-							<li>Scion</li>
+							<li>
+								<a href="http://www.medicaid.gov/" alt="Link to Medicaid dental insurance" title="Link to Medicaid dental insurance">
+									Medicaid
+								</a>
+							</li>
+							<li>
+								<a href="http://www.metlife.com" alt="Link to MetLife dental insurance" title="Link to MetLife dental insurance">
+									MetLife
+								</a>
+							</li>
+							<li>
+								<a href="http://www.sciondental.com" alt="Link to Scion dental Insurance" title="Link to Scion dental insurance">
+									Scion
+								</a>
+							</li>
 							<li>And many others</li>
 						</ul>
 
