Added the word dentist to index page.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h1>
 					Welcome to Super Smiles Dental
 				</h1>
-                <img src="images/home/Family_600x331.jpg" alt="Image of Family" title="Image of Family"/>
+                <img src="images/home/Family_600x331.jpg" alt="Image of Family" title="Welcome to Super Smiles Dental, Your New Family Dentist"/>
 				<h2>
 					Who We Are
 				</h2>
@@ -93,7 +93,7 @@
 					Super Smiles Dental of Burlington is a modern Dental Health Care Center serving Arlington, Burlington, Lexington, Woburn and surrounding areas.  
 				</p>
 				<p>
-					Our mission is to provide high quality affordable dental health care to all members of our community.  Seniors, young adults, and children; all are welcome at Super Smiles Dental.  
+					Our mission is to provide high quality affordable dental health care to all members of our community.  Seniors, young adults, and children; all are welcome at Super Smiles Dental, your community's family dentist.
 				</p>
 				<h2>
 					What We Do
