Added Natasha miller bio and photo.

--- a/about.html
+++ b/about.html
@@ -71,37 +71,58 @@
         	<article id="about">
 				<h1>Dr. Emilie Miller, DMD</h1>
                 <img class="dr-miller" src="images/about/DSC_0186_rt_400x321.jpg" title="Your Community's Dentist" alt="Photo of Dr. Miller." /> 
-                <p>Dr. Miller is a highly experienced dentist having graduated Cum Laude from Boston University Goldman School of Dentistry in 2005.  Dr. Miller started her dental career in under-served communities in Roxbury and Dorchester, and practiced in several more locations in Massachusetts before establishing her own dental practice in Burlington, MA. .  In 2006, she was appointed to the position of Director of the Dental Department at Geiger-Gibson Community Health Center.  During her two year directorship, Dr. Miller also taught students of dental medicine on their externship rotation, earning the title of Assistant Clinical Professor at Boston University Goldman School of Dentistry and Harvard School of Dental Medicine.</p>
-                <p>Dr. Miller keeps her skills and knowledge current on advancements in general dentistry and dental technologies by regularly attending professional training that involves multidisciplinary treatment planning. She is an active member of the <a href="http://www.massdental.org" alt="Click here to go to the Massachusetts Dental Society website." title="Click here to go to the Massachusetts Dental Society website." target="_blank">Massachusetts Dental Society</a> and the <a href="http://www.ada.org" alt="Click here to go to the American Dental Association website." title="Click here to go to the American Dental Association website." target="_blank">American Dental Association</a>.</p>
-                <p>Dr. Miller was born and raised in Montreal, Canada, and is fluent in both English and French. In her spare time, she enjoys reading, hiking in the White Mountains of New Hampshire, ballroom dancing and getting her beloved husband fat by baking delicious desserts. Her pet peeve is proper spelling.</p>
+                <p>
+					Dr. Miller is a highly experienced dentist having graduated Cum Laude from Boston University Goldman School of Dentistry in 2005.  Dr. Miller started her dental career in under-served communities in Roxbury and Dorchester, and practiced in several more locations in Massachusetts before establishing her own dental practice in Burlington, MA. .  In 2006, she was appointed to the position of Director of the Dental Department at Geiger-Gibson Community Health Center.  During her two year directorship, Dr. Miller also taught students of dental medicine on their externship rotation, earning the title of Assistant Clinical Professor at Boston University Goldman School of Dentistry and Harvard School of Dental Medicine.
+				</p>
+                <p>
+					Dr. Miller keeps her skills and knowledge current on advancements in general dentistry and dental technologies by regularly attending professional training that involves multidisciplinary treatment planning. She is an active member of the <a href="http://www.massdental.org" alt="Click here to go to the Massachusetts Dental Society website." title="Click here to go to the Massachusetts Dental Society website." target="_blank">Massachusetts Dental Society</a> and the <a href="http://www.ada.org" alt="Click here to go to the American Dental Association website." title="Click here to go to the American Dental Association website." target="_blank">American Dental Association</a>.
+				</p>
+                <p>
+					Dr. Miller was born and raised in Montreal, Canada, and is fluent in both English and French. In her spare time, she enjoys reading, hiking in the White Mountains of New Hampshire, ballroom dancing and getting her beloved husband fat by baking delicious desserts. Her pet peeve is proper spelling.
+				</p>
                 
-                              <h1 class="padding">Patient Care Coordinator Anne-Marie Sherzi</h1>
+                <h1 class="padding">Patient Care Coordinator Anne-Marie Sherzi</h1>
                 <img src="images/about/DSC_0081_rt_400x321.jpg" title="Photo of staff member 1." alt="Photo of staff member 1." />
-<p>
-With over 30 years of experience, Ms. Sherzi is an expert Patient Care Coordinator.  Ms. Sherzi absolutely loves her profession and it shows.
-</p>
-<p>
-"I love my job!  I love meeting new people, people in person.  The best part of my job is getting to help people; help them get healthy, look healthy, and feel healthy."
-</p>
-<p>
-She is a native of Massachusetts and proudly sports a husband of 21 years, 2 children, and their pug Rocco.  Ms. Sherzi enjoys reading, spending time with her loving family, and watching the New England Patriots: "Go Pats!"  Her pet peeve is cleanliness.
-</p>
-
-                    <p/>
-                <h1 class="padding">Head Assistant Jennifer Hanson</h1>
-                <img src="images/about/DSC_0084_rt_400x321.jpg" title="Photo of staff member 2." alt="Photo of staff member 2." />
-<p>
-Ms. Hanson is a veteran dental professional with over 20 years of experience as a Dental Assistant and Patient Coordinator.  Ms. Hanson is a highly trained chair-side assistant and keeps abreast of the latest advancements in dental care and technology through continuing education classes and skill-focused training; a commitment she takes very seriously.  Ms. Hanson has a very gentle and compassionate chair-side manner and ensures patients receive the best and most informative treatment possible.
-</p>
-<p>
-"My favourite part of this job is changing people's opinions about going to the dentist and getting them excited to come in for their visits."
-</p>
-<p>
-Ms. Hanson is originally from East Boston and now lives in Beverly with her beloved husband, 2 children, and 2 year old beagle.  In her spare time she loves to read, especially to her children, and volunteers at the school library.  Her pet peeve is disorder.
-</p>
-
-
-</p>
+				<p>
+					With over 30 years of experience, Ms. Sherzi is an expert Patient Care Coordinator.  Ms. Sherzi absolutely loves her profession and it shows.
+				</p>
+				<p>
+					"I love my job!  I love meeting new people, people in person.  The best part of my job is getting to help people; help them get healthy, look healthy, and feel healthy."
+				</p>
+				<p>
+					watching the New England Patriots: "Go Pats!"  Her pet peeve is cleanliness.
+				</p>
+				<p/>
+				<h1 class="padding">Head Assistant Jennifer Hanson</h1>
+				<img src="images/about/DSC_0084_rt_400x321.jpg" title="Photo of staff member 2." alt="Photo of staff member 2." />
+				<p>
+					Ms. Hanson is a veteran dental professional with over 20 years of experience as a Dental Assistant and Patient Coordinator.  Ms. Hanson is a highly trained chair-side assistant and keeps abreast of the latest advancements in dental care and technology through continuing education classes and skill-focused training; a commitment she takes very seriously.  Ms. Hanson has a very gentle and compassionate chair-side manner and ensures patients receive the best and most informative treatment possible.
+				</p>
+				<p>
+					"My favourite part of this job is changing people's opinions about going to the dentist and getting them excited to come in for their visits."
+				</p>
+				<p>
+					Ms. Hanson is originally from East Boston and now lives in Beverly with her beloved husband, 2 children, and 2 year old beagle.  In her spare time she loves to read, especially to her children, and volunteers at the school library.  Her pet peeve is disorder.
+				</p>
+				<p/>
+				<h1 class="padding">Assistant Patient Coordinator Natasha Miller</h1>
+				<img src="images/about/natashaprofilepic.jpg" title="Photo of staff member 3." alt="Photo of staff member 3." />
+				<p>
+					Ms. Miller is a dedicated patient coordinator and the newest member of our Super Smiles Professionals.  Raised in the great north west state of Washington, Ms. Miller exhibits the friendly, helpful, tough, and humorous personality for which her home is known.
+				</p>
+				<p>
+					"Being from western Washington state I'm very water resistant."  
+				</p>
+				<p>
+					An ardent proponent of equal access to high quality health care, Ms. Miller ensures all our patients receive superior service with honest, kind, and helpful delivery.  In particular, as a veteran of the U.S. Army, Ms. Miller works diligently to ensure our community veterans receive the care they have earned.      
+				</p>
+				<p>
+					"I came to Super Smiles to learn how to treat patients properly, with respect, to be genuinely helpful and improve their lives.  In my family we have a phrase:  'Good people take care of good people.'  It's the phrase I live by, and something everyone here believes in too."
+				</p>
+				<p>
+					She is a graduate of Harvard University, speaks French, and lives happily with her family of two rabbits Franz, Jasmine, and her loving Labradoodle Terra.
+				</p>
+				<p/>
             </article>
         </div>
         
