--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
 				<h1 class="padding">Assistant Patient Coordinator Natasha Miller</h1>
 				<img src="images/about/natashaprofilepic.jpg" title="Photo of staff member 3." alt="Photo of staff member 3." />
 				<p>
-					Ms. Miller is a dedicated patient coordinator and the newest member of our Super Smiles Professionals.  Raised in the great north west state of Washington, Ms. Miller exhibits the friendly, helpful, tough, and humorous personality for which her home is known.
+					Ms. Miller is a dedicated patient coordinator and our newest Super Smiles Professional.  Raised in the great north west state of Washington, Ms. Miller exhibits the friendly, helpful, tough but humorous personality for which people from her home are known.
 				</p>
 				<p>
 					"Being from western Washington state I'm very water resistant."  
@@ -117,10 +117,10 @@
 					An ardent proponent of equal access to high quality health care, Ms. Miller ensures all our patients receive superior service with honest, kind, and helpful delivery.  In particular, as a veteran of the U.S. Army, Ms. Miller works diligently to ensure our community veterans receive the care they have earned.      
 				</p>
 				<p>
-					"I came to Super Smiles to learn how to treat patients properly, with respect, to be genuinely helpful and improve their lives.  In my family we have a phrase:  'Good people take care of good people.'  It's the phrase I live by, and something everyone here believes in too."
+					"I came to Super Smiles to learn how to treat patients properly, with respect, to be genuinely helpful and improve their lives.  In my family we have a phrase:  'Good people take care of good people.'  It's the phrase I live by, and something everyone here believes in as well."
 				</p>
 				<p>
-					She is a graduate of Harvard University, speaks French, and lives happily with her family of two rabbits Franz, Jasmine, and her loving Labradoodle Terra.
+					Ms. Miller is a graduate of Harvard University, speaks French, and lives happily with her family of two rabbits Franz, Jasmine, and her loving Labradoodle Terra.
 				</p>
 				<p/>
             </article>
