Fixed spelling of Anne-Marie to Annemarie.

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 					Dr. Miller was born and raised in Montreal, Canada, and is fluent in both English and French. In her spare time, she enjoys reading, hiking in the White Mountains of New Hampshire, ballroom dancing and getting her beloved husband fat by baking delicious desserts. Her pet peeve is proper spelling.
 				</p>
                 
-                <h1 class="padding">Patient Care Coordinator Anne-Marie Sherzi</h1>
+                <h1 class="padding">Patient Care Coordinator Annemarie Sherzi</h1>
                 <img src="images/about/DSC_0081_rt_400x321.jpg" title="Photo of staff member 1." alt="Photo of staff member 1." />
 				<p>
 					With over 30 years of experience, Ms. Sherzi is an expert Patient Care Coordinator.  Ms. Sherzi absolutely loves her profession and it shows.
