--- a/about.html
+++ b/about.html
@@ -87,10 +87,10 @@
 					With over 30 years of experience, Ms. Sherzi is an expert Patient Care Coordinator.  Ms. Sherzi absolutely loves her profession and it shows.
 				</p>
 				<p>
-					"I love my job!  I love meeting new people, people in person.  The best part of my job is getting to help people; help them get healthy, look healthy, and feel healthy."
-				</p>
-				<p>
-					watching the New England Patriots: "Go Pats!"  Her pet peeve is cleanliness.
+                    "I love my job!  I love meeting new people, people in person.  The best part of my job is getting to help people; help them get healthy, look healthy, and feel healthy."
+                </p>
+                <p>
+                    She is a native of Massachusetts and proudly sports a husband of 21 years, 2 children, and their pug Rocco.  Ms. Sherzi enjoys reading, spending time with her loving family, and watching the New England Patriots: "Go Pats!"  Her pet peeve is cleanliness.
 				</p>
 				<p/>
 				<h1 class="padding">Head Assistant Jennifer Hanson</h1>
@@ -114,7 +114,7 @@
 					"Being from western Washington state I'm very water resistant."  
 				</p>
 				<p>
-					An ardent proponent of equal access to high quality health care, Ms. Miller ensures all our patients receive superior service with honest, kind, and helpful delivery.  In particular, as a veteran of the U.S. Army, Ms. Miller works diligently to ensure our community veterans receive the care they have earned.      
+					An ardent proponent of equal access to high quality health care, Ms. Miller ensures all our patients receive superior service with honest, kind, and helpful delivery.  In particular, as a veteran of the U.S. Army, Ms. Miller works diligently to ensure our community's veterans receive the care they have earned.      
 				</p>
 				<p>
 					"I came to Super Smiles to learn how to treat patients properly, with respect, to be genuinely helpful and improve their lives.  In my family we have a phrase:  'Good people take care of good people.'  It's the phrase I live by, and something everyone here believes in as well."
