Fixed issue of includes not being set correctly in contacts page.  Also removed redundant code.

--- a/contact-us.html
+++ b/contact-us.html
@@ -104,7 +104,7 @@
     $("#includeTopNav").load("includes/topnav.html");
     $("#includeTopBar").load("includes/topbar.html");
     $("#includeRightNav").load("includes/rightnav.html");
-    $("#includeHours").load("includes/hours.html");
+    $("#includeHours").load("includes/businesshours.html");
     $( "#includeFooter" ).load( "includes/footer.html");
     $( "#includeHkLogo" ).load( "includes/hklogo.html");
         
