Added additional key words and fixed meta tag ends.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta content="masshealth, masshealth dentist, Lexington, Burlington, Woburn, Arlington, super smiles burlington, massachusetts, family dentistry, doctor emilie miller dmd, american dental association, massachusetts dental society, preventive dentistry, cosmetic dentistry, general dentistry, teeth, comprehensive dental care, convenient location near the burlington mall, personalized dental care, professional dental care, affordable dental care, comprehensive dental treatment plan options, dental insurance accepted, dentist, super smiles are healthy smiles, super smiles homepage, learn about super smiles burlington" name="keywords">
-<meta content="Super Smiles is a family dental practice located in Burlington, Massachusetts. Super Smiles offers comprehensive, personalized dental care such as general, cosmetic and preventive treatments." name="description">
+    <meta name="keywords" content="masshealth, dentist, dentistry, dental, dentures, braces, implants, whitening, emergency, Lexington, Burlington, Woburn, Billerica, Arlington, Delta, Cigna, Altus, Dentaquest, Universal, Health, Aetna, Cigna, Guardian, Medicaid, Metlife, Scion, massachusetts, family, doctor, american,  preventive, cosmetic, restorative, general, teeth, convenient, mall, personalized, professional, affordable, insurance, botox, fillers, veteran, modern" />
+    
+<meta content="Super Smiles is a family dental practice located in Burlington, Massachusetts. Super Smiles offers comprehensive, personalized dental care such as general, cosmetic and preventive treatments." name="description"/>
 
     <title>Super Smiles Family Dentistry</title>
     
