Changed email address to use info@.  Updated Friday hours to start at 8:30.

--- a/contact-us.html
+++ b/contact-us.html
@@ -73,8 +73,8 @@
                 <br/><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">54 Middlesex Turnpike <br/>Suite 104 <br/>Burlington, MA 01803</a></p>
             	<p><span class="tab">Phone: </span><a href="tel:7812721288">781.272.1288</a>
             		<!--<br/>123.456.7890 (fax)!-->
-            		<br/><span class="tab">General Inquiries: </span><a href="mailto:appointments@supersmilesburlington.com" alt="General Inquiries: Email us at appointments@supersmilesburlington.com" title="General Inquiries: Email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>
-            		<br/><span class="tab">Appointments: </span><a href="mailto:appointments@supersmilesburlington.com" alt="Make an Appointment: Email us at appointments@supersmilesburlington.com" title="Make an Appointment: Email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a></p>
+            		<br/><span class="tab">General Inquiries: </span><a href="mailto:info@supersmilesburlington.com" alt="General Inquiries: Email us at info@supersmilesburlington.com" title="General Inquiries: Email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a>
+            		<br/><span class="tab">Appointments: </span><a href="mailto:info@supersmilesburlington.com" alt="Make an Appointment: Email us at info@supersmilesburlington.com" title="Make an Appointment: Email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a></p>
             	<h2>Business Hours</h2>
                 <div id="includeHours"></div>
         		<h2>Conveniently Located Near the Burlington Mall</h2>
