--- a/patient-resources.html
+++ b/patient-resources.html
@@ -168,7 +168,7 @@
                     To request an appointment, please call:  <a href="tel:7812721288">781.272.1288</a>
                 </p>
 				<p>
-                    Or email us at: <a href="mailto:appointments@supersmilesburlington.com" alt="Make an appointment: Email us at appointments@supersmilesburlington.com" title="Make an appointment: Email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>. 
+                    Or email us at: <a href="mailto:info@supersmilesburlington.com" alt="Make an appointment: Email us at info@supersmilesburlington.com" title="Make an appointment: Email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a>. 
                 </p>
 				<p>
                     Our office will schedule your appointment as promptly as possible.
