--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<h3>
 					<a href="tel:7812721288">781.272.1288</a>
 					<br/>
-					<a href="mailto:appointments@supersmilesburlington.com" alt="For general inquiries, email us at appointments@supersmilesburlington.com" title="For general inquiries, email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>
+					<a href="mailto:info@supersmilesburlington.com" alt="For general inquiries, email us at info@supersmilesburlington.com" title="For general inquiries, email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a>
 				</h3>
 				<p>To experience the superior quality of Super Smiles Dental, make your appointment today and call us at:   <a href="tel:7812721288">781.272.1288</a></p>
                 <p>We look forward to hearing from you.</p>
