Changed front page photo.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h1>
 					Welcome to Super Smiles Dental
 				</h1>
-                <img src="images/home/Family_600x331.jpg" alt="Image of Family" title="Welcome to Super Smiles Dental, Your New Family Dentist"/>
+                <img src="images/home/patient-team.jpg" alt="Image of team" title="Welcome to Super Smiles Dental, Your New Family Dentist"/>
 				<h2>
 					Who We Are
 				</h2>
